feat: add my work path section

--- a/index.html
+++ b/index.html
@@ -23,5 +23,38 @@
             </div>
         </div>
     </header>
+
+
+    <main>
+        <section class="my-work-path">
+            <div class="container my-work-path-container">
+                <h3 class="title my-work-path__title">My work path</h3>
+                <div class="my-work-path-cards">
+                    <div class="my-work-path-card">
+                        <h4 class="my-work-path-card__title">
+                            Engineer for the repair of equipment, buildings and structures
+                            for Branch of Open Joint-Stock Company \"BELAZ\" - Holding Company
+                            "BELAZ-HOLDING" in Mogilev -  "Mogilev Automobile S.M. Kirov Factory"
+                        </h4>
+                        <p class="my-work-path-card__subtitle">September 2014 - June 2016</p>
+                    </div>
+                    <div class="my-work-path-card">
+                        <h4 class="my-work-path-card__title">
+                            Head of the bureau of heat supply, ventilation, gas supply and energy
+                            consumption for Branch of Open Joint-Stock Company \"BELAZ\" - Holding Company
+                            "BELAZ-HOLDING" in Mogilev -  "Mogilev Automobile S.M. Kirov Factory"
+                        </h4>
+                        <p class="my-work-path-card__subtitle">August 2016 - June 2020</p>
+                    </div>
+                    <div class="my-work-path-card">
+                        <h4 class="my-work-path-card__title">
+                            Specialist of the sales department for LLC \"Red sun\"
+                        </h4>
+                        <p class="my-work-path-card__subtitle">Jule 2020 - Present</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
