feat: add my skills section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
                 </div>
             </div>
         </section>
+
+        <section class="my-skills">
+            <div class="container my-skills-container">
+                <h3 class="title my-skills__title">My skills</h3>
+                <div class="my-skills-icons">
+                    <img class="my-skills__icon" src="./icons8-html5-96.png" alt="HTML5 icon">
+                    <img class="my-skills__icon" src="./icons8-css3-96.png" alt="CSS3 icon">
+                    <img class="my-skills__icon" src="./icons8-sass-96.png" alt="SASS icon">
+                    <img class="my-skills__icon" src="./icons8-javascript-96.png" alt="JS icon">
+                    <img class="my-skills__icon" src="/icons8-github-96.png" alt="Github icon">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
