feat: add education section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
                 </code></p>
             </div>
         </section>
+
+        <section class="education">
+            <div class="container education-container">
+                <h3 class="title education__title">Education</h3>
+                <p class="education__subtitle">At the moment I am taking front-end development courses at the Mella Rossa IT school.</p>
+                <iframe class="education-school__map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.8522399848052!2d30.333575315850617!3d53.89883018009859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d051e6c46c01c3%3A0xd926abd40fc5e001!2zSVQt0YjQutC-0LvQsCDQnNCV0JvQkCDQoNCe0KHQodCQ!5e0!3m2!1sru!2sby!4v1662922920043!5m2!1sru!2sby"
+                    title="map"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
     </main>
 </body>
 </html>
