feat: add languages section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
                 </iframe>
             </div>
         </section>
+
+        <section class="languages">
+            <div class="container languages-container">
+                <h3 class="title languages__title">Languages</h3>
+                <ol class="languages__list">
+                    <li class="languages__item">Russian — Native</li>
+                    <li class="languages__item">English — A1</li>
+                </ol>
+            </div>
+        </section>
     </main>
 </body>
 </html>
