feat: add footer section

--- a/index.html
+++ b/index.html
@@ -108,5 +108,35 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container footer-container">
+            <nav class="footer-nav">
+                <h3 class="title footer__title">Contacts</h3>
+                <ul class="footer-nav__list">
+                    <li class="footer-nav__item">
+                        <a href="https://github.com/NIkNills" class="footer-nav__link">
+                            <img class="footer-nav__link-icon" src="./icons8-github-96.png" alt="Github icon">
+                        </a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href="mailto: niknills94@gmail.com" class="footer-nav__link">
+                            <img class="footer-nav__link-icon" src="./icons8-gmail-96.png" alt="Gmail icon">
+                        </a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href="https://t.me/niknills" class="footer-nav__link">
+                            <img class="footer-nav__link-icon" src="./icons8-telegram-app-96.png" alt="Telegram icon">
+                        </a>
+                    </li>
+                    <li class="footer-nav__item">
+                        <a href="https://discordapp.com/users/1018495933585035304/" class="footer-nav__link">
+                            <img class="footer-nav__link-icon" src="./icons8-discord-90.png" alt="Discord icon">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
