refactor: fix github link path in my skills section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img class="my-skills__icon" src="./icons8-css3-96.png" alt="CSS3 icon">
                     <img class="my-skills__icon" src="./icons8-sass-96.png" alt="SASS icon">
                     <img class="my-skills__icon" src="./icons8-javascript-96.png" alt="JS icon">
-                    <img class="my-skills__icon" src="/icons8-github-96.png" alt="Github icon">
+                    <img class="my-skills__icon" src="./icons8-github-96.png" alt="Github icon">
                 </div>
             </div>
         </section>
