refactor: corrected cv

--- a/index.html
+++ b/index.html
@@ -1,142 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Nikita Kolesnikov</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="container header-container">
-            <div class="header-img">
-                <img class="header-img__img" src="./avatar.jpg" alt="Avatar">
-            </div>
-            <div class="header-info">
-                <p class="header-info__subtitle">
-                    Hello. My name is Nikita, I am 28 years old.
-                    I am quite a creative person, so I became interested
-                    in front-end development. I believe that my age is not
-                    a hindrance to become a highly qualified specialist.
-                </p>
-            </div>
-        </div>
+      <div class="container header-container">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">My skills</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">My projects</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
-
     <main>
-        <section class="my-work-path">
-            <div class="container my-work-path-container">
-                <h3 class="title my-work-path__title">My work path</h3>
-                <div class="my-work-path-cards">
-                    <div class="my-work-path-card">
-                        <h4 class="my-work-path-card__title">
-                            Engineer for the repair of equipment, buildings and structures
-                            for Branch of Open Joint-Stock Company "BELAZ" - Holding Company
-                            "BELAZ-HOLDING" in Mogilev -  "Mogilev Automobile S.M. Kirov Factory"
-                        </h4>
-                        <p class="my-work-path-card__subtitle">September 2014 - June 2016</p>
-                    </div>
-                    <div class="my-work-path-card">
-                        <h4 class="my-work-path-card__title">
-                            Head of the bureau of heat supply, ventilation, gas supply and energy
-                            consumption for Branch of Open Joint-Stock Company "BELAZ" - Holding Company
-                            "BELAZ-HOLDING" in Mogilev -  "Mogilev Automobile S.M. Kirov Factory"
-                        </h4>
-                        <p class="my-work-path-card__subtitle">August 2016 - June 2020</p>
-                    </div>
-                    <div class="my-work-path-card">
-                        <h4 class="my-work-path-card__title">
-                            Specialist of the sales department for LLC "Red sun"
-                        </h4>
-                        <p class="my-work-path-card__subtitle">Jule 2020 - Present</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+      <section class="info">
+        <div class="container info-container">
+          <div class="info-img">
+            <img class="info-img__img" src="./avatar.jpg" alt="Avatar" />
+          </div>
+          <div class="info-info">
+            <p class="info-info__subtitle">
+              Hello. My name is Nikita, I am 28 years old. I am quite a creative
+              person, so I became interested in front-end development. I believe
+              that my age is not a hindrance to become a highly qualified
+              specialist.
+            </p>
+          </div>
+        </div>
+      </section>
 
-        <section class="my-skills">
-            <div class="container my-skills-container">
-                <h3 class="title my-skills__title">My skills</h3>
-                <div class="my-skills-icons">
-                    <img class="my-skills__icon" src="./icons8-html5-96.png" alt="HTML5 icon">
-                    <img class="my-skills__icon" src="./icons8-css3-96.png" alt="CSS3 icon">
-                    <img class="my-skills__icon" src="./icons8-sass-96.png" alt="SASS icon">
-                    <img class="my-skills__icon" src="./icons8-javascript-96.png" alt="JS icon">
-                    <img class="my-skills__icon" src="./icons8-github-96.png" alt="Github icon">
-                </div>
+      <section class="my-work-path">
+        <div class="container my-work-path-container">
+          <h3 class="title my-work-path__title">My work path</h3>
+          <div class="my-work-path-cards">
+            <div class="my-work-path-card">
+              <h4 class="my-work-path-card__title">
+                Engineer for the repair of equipment, buildings and structures
+                for Branch of Open Joint-Stock Company "BELAZ" - Holding Company
+                "BELAZ-HOLDING" in Mogilev - "Mogilev Automobile S.M. Kirov
+                Factory"
+              </h4>
+              <p class="my-work-path-card__subtitle">
+                September 2014 - June 2016
+              </p>
             </div>
-        </section>
+            <div class="my-work-path-card">
+              <h4 class="my-work-path-card__title">
+                Head of the bureau of heat supply, ventilation, gas supply and
+                energy consumption for Branch of Open Joint-Stock Company
+                "BELAZ" - Holding Company "BELAZ-HOLDING" in Mogilev - "Mogilev
+                Automobile S.M. Kirov Factory"
+              </h4>
+              <p class="my-work-path-card__subtitle">August 2016 - June 2020</p>
+            </div>
+            <div class="my-work-path-card">
+              <h4 class="my-work-path-card__title">
+                Specialist of the sales department for LLC "Red sun"
+              </h4>
+              <p class="my-work-path-card__subtitle">Jule 2020 - Present</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-        <section class="code-example">
-            <div class="container code-example-container">
-                <h3 class="title code-example__title">Code example</h3>
-                <p class="code-example__code"><code>
-                    function generateHashtag (str) { <br>
-                        <br>
-                        let result = str.split(' ') <br>
-                          .map(item =&gt; item.slice(0, 1).toUpperCase() + item.slice(1)).join('').trim(); <br>
-                        <br>
-                        return result.length &gt;= 140 &vert;&vert; result === '' &quest; false : '#' + result; <br>
-                      }
-                </code></p>
-            </div>
-        </section>
+      <section class="my-skills" id="my-skills">
+        <div class="container my-skills-container">
+          <h3 class="title my-skills__title">My skills</h3>
+          <ul class="my-skills__list">
+            <li class="my-skills__list-item">
+              <img
+                class="my-skills__icon"
+                src="./icons8-html5-96.png"
+                alt="HTML5 icon"
+              />
+            </li>
+            <li class="my-skills__list-item">
+              <img
+                class="my-skills__icon"
+                src="./icons8-css3-96.png"
+                alt="CSS3 icon"
+              />
+            </li>
+            <li class="my-skills__list-item">
+              <img
+                class="my-skills__icon"
+                src="./icons8-sass-96.png"
+                alt="SASS icon"
+              />
+            </li>
+            <li class="my-skills__list-item">
+              <img
+                class="my-skills__icon"
+                src="./icons8-javascript-96.png"
+                alt="JS icon"
+              />
+            </li>
+            <li class="my-skills__list-item">
+              <img
+                class="my-skills__icon"
+                src="./favicon.ico"
+                alt="React icon"
+              />
+            </li>
+            <li class="my-skills__list-item">
+              <img
+                class="my-skills__icon"
+                src="./icons8-github-96.png"
+                alt="Github icon"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <section class="education">
-            <div class="container education-container">
-                <h3 class="title education__title">Education</h3>
-                <p class="education__subtitle">At the moment I am taking front-end development courses at the Mella Rossa IT school.</p>
-                <iframe class="education-school__map"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.8522399848052!2d30.333575315850617!3d53.89883018009859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d051e6c46c01c3%3A0xd926abd40fc5e001!2zSVQt0YjQutC-0LvQsCDQnNCV0JvQkCDQoNCe0KHQodCQ!5e0!3m2!1sru!2sby!4v1662922920043!5m2!1sru!2sby"
-                    title="map"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
-        </section>
+      <section class="code-example">
+        <div class="container code-example-container">
+          <h3 class="title code-example__title">Code example</h3>
+          <p class="code-example__code">
+            <code>
+              function generateHashtag (str) { <br />
+              <br />
+              let result = str.split(' ') <br />
+              .map(item =&gt; item.slice(0, 1).toUpperCase() +
+              item.slice(1)).join('').trim(); <br />
+              <br />
+              return result.length &gt;= 140 &vert;&vert; result === '' &quest;
+              false : '#' + result; <br />
+              }
+            </code>
+          </p>
+        </div>
+      </section>
 
-        <section class="languages">
-            <div class="container languages-container">
-                <h3 class="title languages__title">Languages</h3>
-                <ol class="languages__list">
-                    <li class="languages__item">Russian — Native</li>
-                    <li class="languages__item">English — A1</li>
-                </ol>
-            </div>
-        </section>
+      <section class="my-projects" id="my-projects">
+        <div class="container my-projects-container">
+          <h3 class="title my-projects__title">My projects</h3>
+          <ul class="my-project__list">
+            <li class="my-project__item">
+              <a
+                href="https://rolling-scopes-school.github.io/niknills-JSFE2022Q3/online-zoo/"
+              >
+                <img
+                  class="my-project__img"
+                  src="./my-project1.png"
+                  alt="my project"
+                />
+              </a>
+            </li>
+            <li class="my-project__item">
+              <a href="https://react-weather-by-niknills.netlify.app/">
+                <img
+                  class="my-project__img"
+                  src="./my-project2.png"
+                  alt="my project"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="education">
+        <div class="container education-container">
+          <h3 class="title education__title">Education</h3>
+          <p class="education__subtitle">
+            At the moment I am taking front-end development courses at the Mella
+            Rossa IT school.
+          </p>
+          <iframe
+            class="education-school__map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.8522399848052!2d30.333575315850617!3d53.89883018009859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d051e6c46c01c3%3A0xd926abd40fc5e001!2zSVQt0YjQutC-0LvQsCDQnNCV0JvQkCDQoNCe0KHQodCQ!5e0!3m2!1sru!2sby!4v1662922920043!5m2!1sru!2sby"
+            title="map"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          >
+          </iframe>
+        </div>
+      </section>
+
+      <section class="languages">
+        <div class="container languages-container">
+          <h3 class="title languages__title">Languages</h3>
+          <ol class="languages__list">
+            <li class="languages__item">Russian — Native</li>
+            <li class="languages__item">English — A1</li>
+          </ol>
+        </div>
+      </section>
+
+      <section class="contacts" id="contacts">
+        <div class="container contacts-container">
+          <nav class="contacts-nav">
+            <h3 class="title contacts__title">Contacts</h3>
+            <ul class="contacts-nav__list">
+              <li class="contacts-nav__item">
+                <a
+                  href="mailto: niknills94@gmail.com"
+                  class="contacts-nav__link"
+                >
+                  <img
+                    class="contacts-nav__link-icon"
+                    src="./icons8-gmail-96.png"
+                    alt="Gmail icon"
+                  />
+                </a>
+              </li>
+              <li class="contacts-nav__item">
+                <a href="https://t.me/niknills" class="contacts-nav__link">
+                  <img
+                    class="contacts-nav__link-icon"
+                    src="./icons8-telegram-app-96.png"
+                    alt="Telegram icon"
+                  />
+                </a>
+              </li>
+              <li class="contacts-nav__item">
+                <a
+                  href="https://discordapp.com/users/1018495933585035304/"
+                  class="footer-nav__link"
+                >
+                  <img
+                    class="contacts-nav__link-icon"
+                    src="./icons8-discord-90.png"
+                    alt="Discord icon"
+                  />
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
-        <div class="container footer-container">
-            <nav class="footer-nav">
-                <h3 class="title footer__title">Contacts</h3>
-                <ul class="footer-nav__list">
-                    <li class="footer-nav__item">
-                        <a href="https://github.com/NIkNills" class="footer-nav__link">
-                            <img class="footer-nav__link-icon" src="./icons8-github-96.png" alt="Github icon">
-                        </a>
-                    </li>
-                    <li class="footer-nav__item">
-                        <a href="mailto: niknills94@gmail.com" class="footer-nav__link">
-                            <img class="footer-nav__link-icon" src="./icons8-gmail-96.png" alt="Gmail icon">
-                        </a>
-                    </li>
-                    <li class="footer-nav__item">
-                        <a href="https://t.me/niknills" class="footer-nav__link">
-                            <img class="footer-nav__link-icon" src="./icons8-telegram-app-96.png" alt="Telegram icon">
-                        </a>
-                    </li>
-                    <li class="footer-nav__item">
-                        <a href="https://discordapp.com/users/1018495933585035304/" class="footer-nav__link">
-                            <img class="footer-nav__link-icon" src="./icons8-discord-90.png" alt="Discord icon">
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+      <div class="container footer-container">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="https://rs.school/js/">
+              <img
+                class="footer__logo-img"
+                src="./rs_school_js.svg"
+                alt="logo"
+              />
+            </a>
+          </li>
+          <li class="footer__item">
+            <span class="footer__info"> Nikita Kolesnikov, 2022 </span>
+          </li>
+          <li class="footer__item">
+            <a href="https://github.com/NIkNills">
+              <img
+                class="footer__icon-img"
+                src="./icons8-github-96.png"
+                alt="icon"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
