feat: add my projects section

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link" href="#">My skills</a>
+              <a class="nav__link" href="#my-skills">My skills</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#">My projects</a>
+              <a class="nav__link" href="#my-projects">My projects</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#">Contacts</a>
+              <a class="nav__link" href="#contacts">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -127,6 +127,52 @@
         </div>
       </section>
 
+      <section class="code-example">
+        <div class="container code-example-container">
+          <h3 class="title code-example__title">Code example</h3>
+          <p class="code-example__code">
+            <code>
+              function generateHashtag (str) { <br />
+              <br />
+              let result = str.split(' ') <br />
+              .map(item =&gt; item.slice(0, 1).toUpperCase() +
+              item.slice(1)).join('').trim(); <br />
+              <br />
+              return result.length &gt;= 140 &vert;&vert; result === '' &quest;
+              false : '#' + result; <br />
+              }
+            </code>
+          </p>
+        </div>
+      </section>
+
+      <section class="my-projects" id="my-projects">
+        <div class="container my-projects-container">
+          <h3 class="title my-projects__title">My projects</h3>
+          <ul class="my-projects__list">
+            <li class="my-projects__item">
+              <a href="https://react-weather-by-niknills.netlify.app/">
+                <img
+                  class="my-projects__img"
+                  src="./my-project1.png"
+                  alt="my projects image"
+                />
+              </a>
+            </li>
+            <li class="my-projects__item">
+              <a
+                href="https://rolling-scopes-school.github.io/niknills-JSFE2022Q3/online-zoo/"
+              >
+                <img
+                  class="my-projects__img"
+                  src="./my-project2.png"
+                  alt="my projects image"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <section class="education">
         <div class="container education-container">
