refactor: fixed validation errors

--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
     <main>
       <section class="info">
         <div class="container info-container">
-          <div class="info-img">
-            <img class="info-img__img" src="./avatar.jpg" alt="Avatar" />
-          </div>
-          <div class="info-info">
-            <p class="info-info__subtitle">
-              Hello. My name is Nikita, I am 28 years old. I am quite a creative
-              person, so I became interested in front-end development. I believe
-              that my age is not a hindrance to become a highly qualified
-              specialist.
-            </p>
+          <h1 class="title">About me</h1>
+          <div class="info-content">
+            <div class="info-img">
+              <img class="info-img__img" src="./avatar.jpg" alt="Avatar" />
+            </div>
+            <div class="info-text">
+              <p class="info-info__subtitle">
+                Hello. My name is Nikita, I am 28 years old. I am quite a
+                creative person, so I became interested in front-end
+                development. I believe that my age is not a hindrance to become
+                a highly qualified specialist.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -79,7 +82,7 @@
 
       <section class="my-skills" id="my-skills">
         <div class="container my-skills-container">
-          <h3 class="title my-skills__title">My skills</h3>
+          <h2 class="title my-skills__title">My skills</h2>
           <ul class="my-skills__list">
             <li class="my-skills__list-item">
               <img
@@ -205,8 +208,8 @@
 
       <section class="contacts" id="contacts">
         <div class="container contacts-container">
+          <h3 class="title contacts__title">Contacts</h3>
           <nav class="contacts-nav">
-            <h3 class="title contacts__title">Contacts</h3>
             <ul class="contacts-nav__list">
               <li class="contacts-nav__item">
                 <a
